[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-qwen-image"
version = "1.0.0"
description = "ComfyUI plugin for Qwen-Image model with advanced text rendering and image generation capabilities"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Augment Agent", email = "agent@augmentcode.com"}
]
keywords = [
    "comfyui",
    "qwen-image",
    "text-to-image",
    "image-generation",
    "chinese-text-rendering",
    "diffusion-models",
    "ai-art"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
# Dependencies are sourced from requirements.txt during publishing/installation
# Keeping this empty avoids version drift between files.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]
performance = [
    "xformers>=0.0.20",
    "bitsandbytes>=0.41.0",
    "flash-attn>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/xuchenxu168/ComfyUI_Qwen-Image"
Repository = "https://github.com/xuchenxu168/ComfyUI_Qwen-Image"
Documentation = "https://github.com/xuchenxu168/ComfyUI_Qwen-Image#readme"
"Bug Tracker" = "https://github.com/xuchenxu168/ComfyUI_Qwen-Image/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88


# Comfy Registry metadata
[tool.comfy]
# TODO: Replace with your real PublisherId from https://registry.comfy.org (profile page)
PublisherId = "ken-chen"
# This is how your node shows up in the Registry; you can change it later.
DisplayName = "ComfyUI Qwen-Image + DiffSynth"
# Optional, but recommended: 800x400 or smaller, absolute URL
Icon = "https://raw.githubusercontent.com/xuchenxu168/ComfyUI_Qwen-Image/main/icon.png"
